--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,21 @@ venv/
 config/config
 2.ppk
 2
+2.pem
 Webots_2025a/
 home_ipv6/
 Python313/
 Python310/
+home_ipv4/
+tmp/
+notebook/
+OpenSSL-Win64/
+kdiff3/
+wscite/
+wink3/
+stunnel/
+sharex/
+PuTTY/
+portablegit/
+DiaPortable/
+CoppeliaSim/
